# dlw-hackathon

./: .gitignore  README.md  combine_raw_datasets.py  main.py  pyproject.toml  test_video_metrics.py  vid_to_img_pipeline.py  view_combined_dataset.py
crowd-dashboard/: README.md  index.html  package-lock.json  package.json
crowd-dashboard/src/: App.tsx  index.css  types.ts
crowd-dashboard/src/components/: GlobalRiskGauge.tsx  LiveActivityLog.tsx  RawPacketStream.tsx  StationModel.tsx  SystemHealthSidebar.tsx  ZoneCard.tsx
crowd-dashboard/src/hooks/: usePresentationSimulator.ts  useTelemetrySimulator.ts  useTelemetryStream.ts
edge_device/: DataConstructor.py  README.md  main.py  plot_mock_calibration.py  predict.py  run_edge_inference.py  run_parallel_cameras.sh  utils.py
model/: generate_density_map.py  predict.py
server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  go.mod  main.go
server/db/: init.sql
testbench/: test_video_metrics.py
