[project]
name = "dlw-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "albumentations>=2.0.8",
    "matplotlib>=3.10.7",
    "ipykernel>=7.2.0",
    "numpy>=2.4.2",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.2",
    "onnxslim>=0.1.86",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pkg>=0.2",
    "pycocotools>=2.0.11",
    "pyyaml>=6.0.3",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "setuptools<82",
    "tensorboard>=2.20.0",
    "thop>=0.1.1.post2209072238",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "ultralytics>=8.4.19",
]
